# hirebase-mcp

./: README.md  build_entry.py  pyproject.toml
.github/workflows/: ci.yml  mcp-hn-build.yml
src/: __init__.py  server.py
src/hirebase_mcp/: __main__.py
src/mcp_server/: __init__.py  __main__.py  server.py
tests/: test_mcp_tools.py
