[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hirebase-mcp"
version = "0.1.0"
description = "HireBase MCP Server"
requires-python = ">=3.10"
dependencies = [
    "requests",
    "mcp[cli]",
]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
]

[tool.hatch.build.targets.wheel]
packages = ["src"] 
